Re alignment of brige svg to fix rendering whitespace bug

--- a/src/components/SVG/Bridge/Bridge.scss
+++ b/src/components/SVG/Bridge/Bridge.scss
@@ -10,7 +10,7 @@ $breakpoint-m: 800px;
 .intro__bridge-container{
     position: relative;
     z-index: 5;
-    top: 16%;
+    top: 18%;
     height: 20vh;
 
     .intro__bridge{
